apps/_examples/demo-backend/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-backend-vs
  namespace: default
spec:
  hosts:
    - demo-backend
  http:
    - name: primary
      route:
        - destination:
            host: demo-backend
          weight: 100
